[package]
name = "nucleus-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
lattice-guard = { path = "../lattice-guard", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
