[package]
name = "nucleus-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
portcullis = { path = "../portcullis", features = ["serde"] }
nucleus-spec = { path = "../nucleus-spec" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
