[package]
name = "nucleus-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
portcullis = { path = "../portcullis", features = ["serde"] }
portcullis-core = { path = "../portcullis-core", features = ["serde"] }
nucleus-spec = { path = "../nucleus-spec" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
url = "2.5"
c2pa = { workspace = true, optional = true, features = ["file_io"] }

[features]
default = []
c2pa-verify = ["dep:c2pa"]

[dev-dependencies]
tempfile = { workspace = true }
