[package]
name = "nucleus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for running AI agents with nucleus enforcement"
repository = "https://github.com/coproduct-opensource/nucleus"
documentation = "https://docs.rs/nucleus-cli"
readme = "README.md"
keywords = ["ai", "security", "cli", "agents", "sandbox"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nucleus"
path = "src/main.rs"

[dependencies]
# Core enforcement
lattice-guard = { path = "../lattice-guard" }
nucleus-spec = { path = "../nucleus-spec" }
nucleus-client = { path = "../nucleus-client" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# Serialization and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Decimal for budget
rust_decimal = "1.40"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
shellexpand = "3.1"
dirs = "6.0"
uuid = { version = "1.11", features = ["v4"] }
ureq = { version = "3.1", features = ["json"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# macOS Keychain (conditional)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.5"

[dev-dependencies]
tempfile = "3.15"

[lints]
workspace = true
