[package]
name = "nucleus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for running AI agents with nucleus enforcement"
repository = "https://github.com/coproduct-opensource/nucleus"
documentation = "https://docs.rs/nucleus-cli"
readme = "README.md"
keywords = ["ai", "security", "cli", "agents", "sandbox"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nucleus"
path = "src/main.rs"

[dependencies]
# Core enforcement
portcullis = { path = "../portcullis", features = ["spec"] }
nucleus-spec = { path = "../nucleus-spec" }
nucleus-client = { path = "../nucleus-client" }
nucleus-proto = { path = "../nucleus-proto" }

# gRPC client
tonic = { workspace = true }

# CLI
clap = { workspace = true }
whoami = "1"

# Async runtime
tokio = { workspace = true, features = ["full", "process"] }

# Serialization and config
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Decimal for budget
rust_decimal = { workspace = true }

# Crypto for attenuation tokens
ring = { workspace = true }
base64 = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shellexpand = "3.1"
dirs = "6.0"
uuid = { workspace = true }
ureq = { workspace = true }
rand = "0.10"
chrono = { workspace = true, features = ["serde"] }
hex = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rustls = { workspace = true }

# macOS Keychain (conditional)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
