[package]
name = "nucleus-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client utilities for signing nucleus node/proxy requests"
repository = "https://github.com/coproduct-opensource/nucleus"
documentation = "https://docs.rs/nucleus-client"
readme = "README.md"
keywords = ["ai", "security", "client", "hmac"]
categories = ["authentication", "development-tools"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[lints]
workspace = true
