[package]
name = "nucleus-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client utilities for signing nucleus node/proxy requests"
repository = "https://github.com/coproduct-opensource/nucleus"
documentation = "https://docs.rs/nucleus-client"
readme = "README.md"
keywords = ["ai", "security", "client", "hmac"]
categories = ["authentication", "development-tools"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Optional async drand client dependencies
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
tracing = { version = "0.1", optional = true }

# BLS signature verification for drand beacons
drand-verify = { version = "0.6", optional = true }

[features]
default = []
async-drand = ["reqwest", "tokio", "drand-verify", "tracing"]

[lints]
workspace = true
