[package]
name = "nucleus-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client utilities for signing nucleus node/proxy requests"
repository = "https://github.com/coproduct-opensource/nucleus"
documentation = "https://docs.rs/nucleus-client"
readme = "README.md"
keywords = ["ai", "security", "client", "hmac"]
categories = ["authentication", "development-tools"]

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Optional async drand client dependencies
reqwest = { workspace = true, features = ["rustls-tls", "json"], optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }
tracing = { workspace = true, optional = true }

# BLS signature verification for drand beacons
drand-verify = { version = "0.6", optional = true }

[features]
default = []
async-drand = ["reqwest", "tokio", "drand-verify", "tracing"]

[lints]
workspace = true
