[package]
name = "nucleus-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Job orchestrator: typed JobSpec → agent execution → provenance Bundle"
repository = "https://github.com/coproduct-opensource/nucleus"
readme = "README.md"
keywords = ["control-plane", "orchestrator", "provenance", "ifc", "agents"]
categories = ["development-tools"]

[dependencies]
nucleus-lineage = { path = "../nucleus-lineage" }
nucleus-envelope = { path = "../nucleus-envelope" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
nucleus-lineage = { path = "../nucleus-lineage", features = ["insecure-local-issuer"] }
tempfile = { workspace = true }

[lints]
workspace = true
