[package]
name = "nucleus-creditworthiness"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Agent credit file: aggregate recompute-verified history into bond-substituting reputation. A multi-dimensional, order-independent (recompute-stable) vector — financial-default dimension active, Pigouvian externality dimension reserved-but-dormant — composing the proven nucleus-witness-olog::required_bond kernel."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
# The PROVEN kernel: required_bond / deters / AmountMicro. Reputation
# substitutes for capital down to a Sybil-proof floor, value-identical to Lean
# `requiredBond` (`[propext, Quot.sound]`-only). We COMPOSE it — the money path
# never re-implements the proven function.
nucleus-witness-olog = { path = "../nucleus-witness-olog" }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
