[package]
name = "nucleus-econ-types"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Financially load-bearing newtypes (MicroUsd, AuctionId/AgentId/ProposalId) shared across the Nucleus economic surface. Zero-dependency beyond serde so every money/ID crate can depend on it without pulling in heavy transitive graphs. Wire shape is byte-identical to the bare primitive via serde(transparent)."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
# Property-based proof of the algebraic laws (commutative monoid, checked/
# saturating agreement, total round-trips) in `tests::laws`.
proptest = { workspace = true }
