[package]
name = "nucleus-externality"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Coproduct Pigouvian externality layer: signed externality envelopes, OLAP rollup cube, and rate-setter glue between nucleus-econ-kernels VCG clearing and the witness-federation rebate path. SOTA-inspired by arXiv 2106.06060 + 2601.03451 + 2305.01477; ZK/TEE oracle envelopes per Verifiable Carbon Accounting."

[lints]
workspace = true

[dependencies]
# default-features = false: the wasm-pure-crates gate builds this crate for
# wasm32, and lineage's default sink-io (std::fs) + uuid-without-js only
# compile natively — exactly the consumption mode lineage's own docs call for.
nucleus-lineage = { path = "../nucleus-lineage", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
chrono = { workspace = true }
nucleus-econ-kernels = { path = "../nucleus-econ-kernels" }
